[package]
name = "millau-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/parity-bridges-common/"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive"] }
hex-literal = "0.4"
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

# Bridge dependencies

bp-header-chain = { git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false }
bp-messages = { git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false }
bp-millau = { git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false }
bp-parachains = { git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false }
bp-polkadot-core = { git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false }
bp-relayers = { git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false }
bp-rialto = { git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false }
bp-rialto-parachain = { git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false }
bp-runtime = { git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false }
bp-westend = { git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false  }
bp-xcm-bridge-hub = { git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false }
bridge-runtime-common = {  git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false }
pallet-bridge-grandpa = {  git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false }
pallet-bridge-messages = { git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false }
pallet-bridge-parachains = { git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false }
pallet-bridge-relayers = { git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false  }
pallet-shift-session-manager = { git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false }
pallet-xcm-bridge-hub = { git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false }
pallet-xcm-bridge-hub-router = { git = "https://github.com/lean-apple/dg-bridges-common.git", branch="ln-global-refresh", default-features = false }

# Substrate Dependencies

sp-consensus-beefy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false, optional = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-beefy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-beefy-mmr = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-mmr = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }

# Local Dependencies
pallet-computational-work = { default-features = false, path = "../pallets/computational-work"}
pallet-check-node-computational-work = { default-features = false, path = "../pallets/check-node-computational-work"}

# Polkadot Dependencies
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }

[dev-dependencies]
bridge-runtime-common = { git = "https://github.com/lean-apple/dg-bridges-common", branch="ln-global-refresh", default-features = false }
env_logger = "0.10"
pallet-bridge-relayers = { git = "https://github.com/lean-apple/dg-bridges-common", branch="ln-global-refresh", default-features = false  }
static_assertions = "1.1"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }

[features]
default = [ "std" ]
std = [
	"bp-messages/std",
	"bp-millau/std",
	"bp-parachains/std",
	"bp-polkadot-core/std",
	"bp-relayers/std",
	"bp-rialto-parachain/std",
	"bp-rialto/std",
	"bp-runtime/std",
	"bp-westend/std",
	"bp-xcm-bridge-hub/std",
	"bridge-runtime-common/std",
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-beefy-mmr/std",
	"pallet-beefy/std",
	"pallet-bridge-grandpa/std",
	"pallet-bridge-messages/std",
	"pallet-bridge-parachains/std",
	"pallet-bridge-relayers/std",
	"pallet-check-node-computational-work/std",
	"pallet-computational-work/std",
	"pallet-grandpa/std",
	"pallet-mmr/std",
	"pallet-session/std",
	"pallet-shift-session-manager/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-utility/std",
	"pallet-xcm-bridge-hub-router/std",
	"pallet-xcm-bridge-hub/std",
	"pallet-xcm/std",
	"scale-info/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-beefy/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]
runtime-benchmarks = [
	"bridge-runtime-common/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-bridge-messages/runtime-benchmarks",
	"pallet-bridge-parachains/runtime-benchmarks",
	"pallet-bridge-relayers/runtime-benchmarks",
	"pallet-xcm-bridge-hub-router/runtime-benchmarks",
	"pallet-xcm-bridge-hub/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
